리스트 페이징 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="movie">영화</string>
     <string name="people">인물</string>
     <string name="my_page">마이페이지</string>
+    <string name="note_rate">NR</string>
 </resources>
