인물 상세 페이지 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="people">인물</string>
     <string name="my_page">마이페이지</string>
     <string name="note_rate">NR</string>
+    <string name="people_detail">인물상세</string>
 </resources>
