--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="people_detail">인물상세</string>
     <string name="movie_detail">영화상세</string>
     <string name="transition_image">transition_image_%1d</string>
+    <string name="biography">약력\n%s</string>
 </resources>
