--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="movie_detail">영화상세</string>
     <string name="transition_image">transition_image_%1d</string>
     <string name="biography">약력\n%s</string>
+    <string name="light_mode">라이트 모드</string>
+    <string name="dark_mode">다크 모드</string>
+    <string name="bright_system_mode">시스템설정에 따름</string>
 </resources>
